--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "1.1.1",
     "react-stars": "^2.2.5",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
