--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "socket.io": "*",
     "mongoose": "^4.13.6",
     "node-geocoder": "^3.22.0",
     "password-hash": "^1.2.2",
